--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HAELU</title>
+  <title>UNIGATE SERVICES</title>
 
   <link rel="icon" type="image/png" href="assets/favicon.ico">
 
@@ -36,7 +36,7 @@
           <nav class="navbar navbar-expand-lg navbar-dark">
 
             <a class="navbar-brand navbar-heading" href="#"><img id="logo"
-                src="assets/img/logo/Haelu_Logo_White_Negative_LowRes.png" alt="Haelu logo" /></a>
+                src="assets/img/logo/UNIGATE_LOGO.png" alt="Haelu logo" /></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
               data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false"
@@ -69,7 +69,7 @@
 
         <div class="col-lg-10 col-xs-10 col-sm-10">
           <div class="definition">
-            <h1>hælu</h1>
+            <h1>UNIGATE</h1>
             <h3 class="banner-body">/hey-loo/ - noun. </h3>
             <ol class="banner-body">
               <li>An Anglo-Saxon word representing health, prosperity, wholeness both physically and spiritually</li>
@@ -96,10 +96,9 @@
 
       <div class="col-lg-5 col-md-10 col-xs-10 col-sm-10">
         <h3 class="blue heading mobile-header">WHO WE ARE</h3>
-        <p class="mobile-text">The founders formed Haelu in 2020 with a passion to build innovative technologies that
-          will support a more connected and sustainable future for health and social care. Joining the Wesley Clover
-          portfolio in 2021, Haelu works alongside partner companies such as Cliniconex, to validate and develop
-          demand-led solutions.</p>
+        <p class="mobile-text">Η “Unigate Services Ltd” ξεκίνησε να παρέχει υπηρεσίες τον Ιούλιο του 2006.
+        Αναπτύσσεται με γρήγορους ρυθμούς στον τομέα της μηχανοργάνωσης επιχειρήσεων & της τεχνικής υποστήριξης.
+        Συνεργαζόμενη με τις μεγαλύτερες εταιρείες προϊόντων πληροφορικής, παρέχει υπηρεσίες υψηλής ποιότητας γρήγορα, υπεύθυνα και με ασφάλεια.</p>
         <div class="empty-space"></div>
         <h3 class="blue heading mobile-header">WHAT WE DO</h3>
         <p class="mobile-text">Our projects centre around real and raw needs that we explore with open minds and
