--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
         </div>
 
         <div class="col-lg-10 col-xs-10 col-sm-10">
-          <div class="definition">
+          <div class="definition"> -->
             <h1>UNIGATE</h1>
             <h3 class="banner-body">/hey-loo/ - noun. </h3>
             <ol class="banner-body">
               <li>An Anglo-Saxon word representing health, prosperity, wholeness both physically and spiritually</li>
               <li>A Welsh tech-startup with a desire to bring innovation to health and social care</li>
             </ol>
+            
           </div>
         </div>
 
@@ -109,7 +110,7 @@
       </div>
 
       <div class="col-lg-5">
-        <img src="assets/img/brain.png" class="brain-image" alt="Innovation Brain Image by Chi Shiun Wu from Pixabay">
+        <img src="assets/img/undraw_Maintenance_re_59vn.png" class="brain-image" alt="Innovation Brain Image by Chi Shiun Wu from Pixabay">
       </div>
 
       <div class="col-lg-1 col-xs-1 col-sm-1">
