--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <div class="row colour-section banner">
         <div class="col-lg-1 col-xs-1 col-sm-1">
-          <img src="assets/img/HexLeftHeader.png" alt="Hexagon Pattern" class="hex-general hexLeftHeader">
+          <img src="assets/img/logo/unigate/HexLeftHeader.png" alt="Hexagon Pattern" class="hex-general hexLeftHeader">
         </div>
 
         <div class="col-lg-10 col-xs-10 col-sm-10">
@@ -79,7 +79,7 @@
         </div>
 
         <div class="col-lg-1 col-xs-1 col-sm-1">
-          <img src="assets/img/HexRightHeader.png" alt="Hexagon Pattern" class="hex-general hexRightHeader">
+          <img src="assets/img/logo/unigate/HexRightHeader.png" alt="Hexagon Pattern" class="hex-general hexRightHeader">
         </div>
 
       </div>
@@ -113,7 +113,7 @@
       </div>
 
       <div class="col-lg-1 col-xs-1 col-sm-1">
-        <img src="assets/img/HexRightAbout.png" alt="Hexagon Pattern" class="hex-general hexRightAbout">
+        <img src="assets/img/logo/unigate/HexRightAbout.png" alt="Hexagon Pattern" class="hex-general hexRightAbout">
       </div>
 
     </div>
@@ -124,7 +124,7 @@
   <section id="team" class="colour-section">
     <div class="row">
       <div class="col-1">
-        <img src="assets/img/HexLeftTeam.png" alt="Hexagon Pattern" class="hex-general hexLeftTeam">
+        <img src="assets/img/logo/unigate/HexLeftTeam.png" alt="Hexagon Pattern" class="hex-general hexLeftTeam">
       </div>
       <div class="col-10">
         <div class="row">
@@ -349,7 +349,7 @@
         
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <img src="assets\img\customers-PAEEK.png" class="img-fluid" alt="">
+            <img src="assets\img\logo\unigate\cera-logo.png" class="img-fluid" alt="">
           </div>
         </div>
       
@@ -435,12 +435,11 @@
     <div class="row">
       <div class="col-lg-1 col-sm-1 col-xs-1"></div>
       <div class="col-lg-3 col-sm-3 col-xs-3">
-        <h1><a href="#title" class="footer-text"><img src="assets\UNIGATE_LOGO.png"
+        <h1><a href="#title" class="footer-text"><img src="assets\img\logo\unigate\Andreou logo cloud PNG me logia.png"
               alt="Unigate logo" class="footer-logo" /></a></h1>
         <div class="haelu-socials">
-          <i href="#" class="fab fa-linkedin-in fa-2x haelu-social"></i>
-          <i href="#" class="fab fa-twitter fa-2x haelu-social"></i>
-          <i href="https://www.facebook.com/UNIGATE.SERVICES" class="fab fa-facebook-f fa-2x haelu-social"></i>
+          <a href="https://www.linkedin.com/in/andreas-andreou-86161258/"> <i href="#" class="fab fa-linkedin-in fa-2x haelu-social"></i></a>
+          <a href="https://www.facebook.com/UNIGATE.SERVICES"> <i href="#" class="fab fa-facebook-f fa-2x haelu-social"></i></a>
         </div>
       </div>
       <div class="col-lg-6 col-sm-6 col-xs-6 site-links">
